Fix left menu on tablet

--- a/src/main/webapp/templates/themes/admin2/assets/css/main-responsive.css
+++ b/src/main/webapp/templates/themes/admin2/assets/css/main-responsive.css
@@ -58,7 +58,7 @@
     ul.main-navigation-menu > li:first-child:hover .title {
       display: none; }
   ul.main-navigation-menu > li:hover {
-    width: 225px;
+    width: 239px;
     position: relative; }
     ul.main-navigation-menu > li:hover .selected {
       display: none; }
@@ -70,7 +70,7 @@
       content: "";
       bottom: -1px;
       position: absolute;
-      left: 35px;
+      left: 50px;
       top: -1px;
       width: 14px;
       background: url(../images/menu-white-arrow.png) left center no-repeat; }
@@ -78,7 +78,7 @@
       width: 189px;
       position: absolute;
       z-index: 1000;
-      left: 36px;
+      left: 50px;
       margin-top: 0;
       top: 100%;
       display: block !important; }
